2025-XX-XX   3.4.1:
-------------------


2025-05-06   3.4.0:
-------------------
  * remove `.endian()` method in favor of data descriptor `.endian`
  * allow bitarray initializer `bytes` or `bytearray` to set buffer directly
  * allow calling `.extend()` with `bytes` object (although the only
    valid bytes are 0x00 and 0x01)
  * add `util.byteswap()`
  * add `util.correspond_all()`
  * fix `.reverse()` for imported buffer
  * drop Python 3.5 support
  * add tests


2025-05-02   3.3.2:
-------------------
  * fix off-by-one-error in check for length of count argument
    in `util.canonical_decode()`
  * simplify `util.int2ba()`
  * add tests
  * add [masked indexing example](../examples/masked.py)
  * add [tricks example](../examples/tricks.py)


2025-04-04   3.3.1:
-------------------
  * remove `License` classifier in favor of a SPDX license expression, #231
  * reorganize and cleanup many tests


2025-03-30   3.3.0:
-------------------
  * add optional `group` and `sep` arguments' to `.to01()`, #230 -
    as well as `util.ba2hex()` and `util.ba2base()`
  * ignore whitespace in `util.base2ba()` and `util.hex2ba()`
  * check for embedded nul characters when extending (and initializing)
    bitarray from string
  * improve testing
  * add [double precision floating point number example](../examples/double.py)


2025-03-19   3.2.0:
-------------------
  * add `util.xor_indices()`, #229
  * add [Hamming code example](../examples/hamming.py)


2025-03-06   3.1.1:
-------------------
  * updated `pythoncapi_compat.h` for pypy3.11 support, see #227
  * use `__builtin_parityll()` when available in `util.parity()`
  * add `parity_64()` to header
  * simplify some tests
  * add [LFSR example](../examples/lfsr.py)


2025-02-19   3.1.0:
-------------------
  * allow mask assignment to bitarrays, see #225
  * add missing masked operations to pyi-file
  * refactor `resize()` and avoid overallocation when downsizing buffer
  * update `build_wheels.yml`
  * fix some typos