@@ -1,5 +1,6 @@
 2025-XX-XX   3.4.1:
 -------------------
+  * implement `bits2bytes()` in C
 
 
 2025-05-06   3.4.0:
